--- a/package.json
+++ b/package.json
@@ -4,7 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ng": "ng",
+    "start": "ng serve",
+    "test": "ng test",
+    "e2e": "ng e2e",
+    "cypress:run": "npx cypress run",
+    "cypress:e2e": "start-test start http-get://localhost:4200 cypress:run",
+    "cy": "start-test start http-get://localhost:4200 cypress:run",
+    "cy:open_dev": "npx cypress open --env username=solizDEV@gmail.com,password=dev123",
+    "cy:open_qa": "npx cypress open --env username=solizQA@gmail.com,password=qa123",
+    "cy:open_process": "npx cypress open --env username=$DB_USERNAME,password=$PASSWORD"
+    
+
+    
   },
   "author": "",
   "license": "ISC",
