--- a/package.json
+++ b/package.json
@@ -8,19 +8,22 @@
     "start": "ng serve",
     "test": "ng test",
     "e2e": "ng e2e",
-    "cypress:run": "npx cypress run",
-    "cypress:e2e": "start-test start http-get://localhost:4200 cypress:run",
-    "cy": "start-test start http-get://localhost:4200 cypress:run",
+    
+    
+    
     "cy:open_dev": "npx cypress open --env username=solizDEV@gmail.com,password=dev123",
     "cy:open_qa": "npx cypress open --env username=solizQA@gmail.com,password=qa123",
-    "cy:open_process": "npx cypress open --env username=$DB_USERNAME,password=$PASSWORD"
-    
+    "cy:open_process": "npx cypress open --env username=$DB_USERNAME,password=$PASSWORD", 
+    "ci": "start-test start http-get://localhost:4200 cypress:run",
+    "ci2": "start-server-and-test http://localhost:4200",
 
-    
+    "cypress:run": "npx cypress run",
+    "cypress:e2e": "start-test start http-get://localhost:4200 cypress:run"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.8.1"
+    "cypress": "^13.8.1",
+    "start-server-and-test": "^2.0.3"
   }
 }
